docs: add how to run alexis