@@ -12,6 +12,59 @@ I'm leaving the code up for archival purposes, but would not expect anyone to ac
 
 Alexis was a general-purpose chatbot with integrations with many popular games and services like Twitch, Steam, and RuneScape. It also performed many functions in guilds to help manage and automate management or encourage activity.
 
+## Getting Started
+
+There is no official or hosted version of Alexis available. To run this, you must build and configure the project yourself.
+
+### Requirements
+
+* Git
+* Java 17
+* Gradle 7
+* [MySQL 5.7](https://www.mysql.com)
+
+### Building
+
+```sh
+# Clone the project
+git clone https://gitlab.com/SethFalco/alexis.git
+cd alexis
+
+# Build the project
+./gradlew assemble
+```
+
+### Configuration
+
+Alexis can be configured through environment variables or Java system properties.
+
+|Variable / Property|Explanation|
+|---|---|
+|`discord.bot-token`|Discord bot token, this is required to run the bot. You can get one from the [Discord Developer Portal](https://discord.com/developers/docs/intro).|
+|`application.name`|Name of the application, this is how the chatbot will refer to itself.|
+|`application.author.name`|Name of the author of the application.|
+|`application.author.url`|URL to attribute the author, like a website or social media profile.|
+|`application.author.support-guild-id`|Discord snowflake of the guild/server that is used to provide support for this instance.|
+|`application.persistence.dialect`|Dialect for the SQL connection, this should typically be set to `org.hibernate.dialect.MySQL57Dialect` or `org.hibernate.dialect.MySQL8Dialect` depending on the version of MySQL you're running.|
+|`application.persistence.driver`|Driver to use for the SQL connection, recommended value is `com.mysql.cj.jdbc.Driver`.|
+|`application.persistence.url`|Connection URL to an SQL database server.|
+|`application.persistence.username`|Username to connect to the SQL database server.|
+|`application.persistence.password`|Password to connect to the SQL database server.|
+|`application.cleverbot.api-key`|API key for [Cleverbot](https://www.cleverbot.com/api/), required for Cleverbot integration.<br><br>⚠️ **Heads-up: Cleverbot is a billed API. There is no way to use it without spending money.**|
+|`application.osu.api-key`|API key for [osu!](https://osu.ppy.sh/wiki/en/osu%21api), required for osu! integration.|
+|`application.steam.api-key`|API key for [Steam](https://steamcommunity.com/dev), required for Steam integration.|
+|`application.twitch.client-id`|Twitch client ID, required for Twitch integration. You can get credentials on the [Twitch Developer Portal](https://dev.twitch.tv/).|
+|`application.twitch.client-secret`|Twitch client secret, required for Twitch integration. You can get credentials on the [Twitch Developer Portal](https://dev.twitch.tv/).|
+|`org.apache.deltaspike.ProjectStage`|Environment the build is deployed to, possible values: `Production`, `Development`|
+|`GOOGLE_APPLICATION_CREDENTIALS`|Path to your Google Cloud Platform service account credentials file. Required for YouTube and Google Translate. <br><br>⚠️ **Heads-up: Google Translate has a limited free-tier, but with enough usage, this will incur a bill.**|
+|`GOOGLE_CLOUD_LOGGING`|If `GOOGLE_APPLICATION_CREDENTIALS` is also populated, this can be set to `true` to send logs to Google Cloud Logging.|
+
+### Running
+
+```sh
+java --add-opens java.base/java.lang=ALL-UNNAMED -jar ./alexis-discord.jar
+```
+
 ## For Developers
 
 ### Libraries
@@ -22,8 +75,3 @@ Java CDI extensions for an annotation-driven approach to creating commands.
 Commandler is a generic project which provides the foundation for a chatbot and is not coupled with any particular platform. [Comcord](https://gitlab.com/SethFalco/comcord) is a command handler for Discord which includes everything you need to work in Discord.
 
 Most third-party services supported in this project were wrapped in [Elypiai](https://gitlab.com/SethFalco/elypiai) where official Java libraries were not available.
-
-### Requirements
-
-* Java 17
-* [MySQL 5.7](https://www.mysql.com)
